2.1.0/_sources/gallery/subplots_axes_and_figures/subplot_demo.rst.txt


.. _sphx_glr_gallery_subplots_axes_and_figures_subplot_demo.py:


==================
Basic Subplot Demo
==================

Demo with two subplots.
For more options, see
:ref:`sphx_glr_gallery_subplots_axes_and_figures_subplots_demo.py`




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_subplot_demo_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt

    # Data for plotting
    x1 = np.linspace(0.0, 5.0)
    x2 = np.linspace(0.0, 2.0)
    y1 = np.cos(2 * np.pi * x1) * np.exp(-x1)
    y2 = np.cos(2 * np.pi * x2)

    # Create two subplots sharing y axis
    fig, (ax1, ax2) = plt.subplots(2, sharey=True)

    ax1.plot(x1, y1, 'ko-')
    ax1.set(title='A tale of 2 subplots', ylabel='Damped oscillation')

    ax2.plot(x2, y2, 'r.-')
    ax2.set(xlabel='time (s)', ylabel='Undamped')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.034 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: subplot_demo.py <subplot_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: subplot_demo.ipynb <subplot_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
